--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@actions/core": "^1.2.6",
 		"@actions/github": "^2.2.0",
+		"@octokit/rest": "^19.0.7",
 		"dotenv": "^16.0.3",
 		"dotenv-expand": "^10.0.0"
 	}
